// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`box_level fixture (LVL-02) > matches the golden snapshot 1`] = `
{
  "biome": "dungeon",
  "blockSizePx": 32,
  "cells": [
    [
      "brick",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "brick",
    ],
    [
      "brick",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "brick",
    ],
    [
      "brick",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "brick",
    ],
    [
      "brick",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "exit",
      "brick",
    ],
    [
      "brick",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "exit",
      "brick",
    ],
    [
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
    ],
  ],
  "displayName": "Box Level",
  "exit": {
    "height": 64,
    "width": 32,
    "x": 608,
    "y": 96,
  },
  "farBgKey": "bg_far_dungeon",
  "fore": [
    null,
    "fore_grass",
    "fore_grass",
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
  "height": 6,
  "id": "box_level",
  "musicId": "music_dungeon",
  "nearBg": [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    "near_bg_pillar",
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
  "parallax": {
    "farScroll": 0.5,
    "foreScroll": 1.25,
    "nearScroll": 1,
  },
  "spawns": [
    {
      "x": 2,
      "y": 4,
    },
    {
      "x": 4,
      "y": 4,
    },
    {
      "x": 6,
      "y": 4,
    },
    {
      "x": 8,
      "y": 4,
    },
  ],
  "switchLinks": [],
  "tilesetKey": "tiles_dungeon",
  "treasureSlots": [],
  "version": 1,
  "width": 21,
}
`;

exports[`hoard_01 fixture (LVL-01) > matches the golden snapshot 1`] = `
{
  "biome": "gold",
  "blockSizePx": 32,
  "cells": [
    [
      "brick",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "brick",
    ],
    [
      "brick",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "brick",
    ],
    [
      "brick",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "brick",
    ],
    [
      "brick",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "exit",
      "brick",
    ],
    [
      "brick",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "empty",
      "exit",
      "brick",
    ],
    [
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
      "brick",
    ],
  ],
  "displayName": "The Treasure Hoard",
  "exit": {
    "height": 64,
    "width": 32,
    "x": 992,
    "y": 96,
  },
  "farBgKey": "bg_far_gold",
  "fore": [
    null,
    null,
    null,
    "fore_grass",
    "fore_grass",
    "fore_grass",
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
  "height": 6,
  "id": "hoard_01",
  "musicId": "hoard",
  "nearBg": [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    "near_bg_pillar",
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    "near_bg_pillar",
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    "near_bg_pillar",
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
  "parallax": {
    "farScroll": 0.5,
    "foreScroll": 1.25,
    "nearScroll": 1,
  },
  "spawns": [
    {
      "x": 2,
      "y": 4,
    },
    {
      "x": 4,
      "y": 4,
    },
    {
      "x": 6,
      "y": 4,
    },
    {
      "x": 8,
      "y": 4,
    },
  ],
  "switchLinks": [],
  "tilesetKey": "tiles_gold",
  "treasureSlots": [
    {
      "x": 11,
      "y": 4,
    },
    {
      "x": 13,
      "y": 4,
    },
    {
      "x": 15,
      "y": 4,
    },
    {
      "x": 17,
      "y": 4,
    },
    {
      "x": 19,
      "y": 4,
    },
    {
      "x": 21,
      "y": 4,
    },
    {
      "x": 23,
      "y": 4,
    },
    {
      "x": 25,
      "y": 4,
    },
  ],
  "version": 1,
  "width": 33,
}
`;
